src/main/java/com/example/Lovable/error/BadRequestException.java
package com.example.Lovable.error;

import lombok.AccessLevel;
import lombok.Getter;
import lombok.RequiredArgsConstructor;
import lombok.Setter;
import lombok.experimental.FieldDefaults;

@Getter
@RequiredArgsConstructor
@FieldDefaults(makeFinal = true,level = AccessLevel.PRIVATE)
public class BadRequestException extends RuntimeException{
    String msg;

}
